[tool.poetry]
name = "rift-framework"
version = "0.7.2"
description = "A magical Python3 -> FunC portal"
authors = ["Amin Rezaei <AminRezaei0x443@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "rift" },
]

[tool.poetry.dependencies]
python = "^3.10"
astpretty = "~3.0.0"
click = "~8.1.3"
libcst = "~0.4.7"
PyYAML = "~6.0"
tomlkit = "~0.11.4"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"

[tool.poetry.scripts]
rift = "rift.cli.entry:entry"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 78