[tool.poetry]
name = "rift-framework"
version = "0.9.14"
description = "The magical Python -> TON Portal"
authors = ["Amin Rezaei <AminRezaei0x443@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "rift" },
]

[tool.poetry.dependencies]
python = "^3.10"
astpretty = "~3.0.0"
click = "~8.1.3"
libcst = "~0.4.7"
PyYAML = "~6.0"
tomlkit = "~0.11.4"
appdirs = "~1.4.4"
colorful = "~0.5.4"
tqdm = "^4.64.1"
setuptools = "^65.6.3"
rift-tonlib = "^0.0.3"
cryptography = "^39.0.0"
pynacl = "^1.5.0"
rich = "^13.3.1"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"

[tool.poetry.scripts]
rift = "rift.cli.entry:entry"

[build-system]
requires = ["poetry-core", "setuptools", "requests", "tqdm"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 78
